# SimpleCaffe

./: .gitignore  CMakeLists.txt  README.md
src/caffe/: caffe.hpp  common.cpp  common.hpp  filler.hpp  layer.cpp  layer.hpp  layer_factory.cpp  layer_factory.hpp  net.cpp  net.hpp  solver.cpp  solver.hpp  synced_memory.cpp  synced_memory.hpp  tensor.cpp  tensor.hpp
src/caffe/layers/: activation_layer.cpp  activation_layer.hpp  cudnn_relu_layer.cpp  cudnn_relu_layer.cu  cudnn_relu_layer.hpp  cudnn_sigmoid_layer.cpp  cudnn_sigmoid_layer.cu  cudnn_sigmoid_layer.hpp  fully_connected_layer.cpp  fully_connected_layer.cu  fully_connected_layer.hpp  relu_layer.cpp  relu_layer.cu  relu_layer.hpp  sigmoid_layer.cpp  sigmoid_layer.cu  sigmoid_layer.hpp
src/caffe/proto/: caffe.pb.cc  caffe.pb.h  caffe.proto
src/caffe/test/: test_activation_layer.cpp  test_caffe_main.hpp  test_common.cpp  test_filler.cpp  test_fully_connected_layer.cpp  test_gradient_check_util.hpp  test_math_functions.cpp  test_tensor.cpp
src/caffe/util/: cudnn.cpp  cudnn.hpp  device_alternate.hpp  host_alternate.hpp  io.cpp  io.hpp  math_functions.cpp  math_functions.cu  math_functions.hpp  upgrade_proto.cpp  upgrade_proto.hpp
src/gtest/: gtest_main.cpp
